syntax = "proto3";

option go_package = "github.com/tnyim/jungletv/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "common.proto";

package jungletv;

message ApplicationsRequest {
    PaginationParameters pagination_params = 1;
    string search_query = 2;
}

message ApplicationsResponse {
    repeated Application applications = 1;
    uint64 offset = 2;
    uint64 total = 3;
}

message GetApplicationRequest {
    string id = 1;
}

message Application {
    string id = 1;
    google.protobuf.Timestamp updated_at = 2;
    User updated_by = 3;
    string edit_message = 4;
    bool allow_launching = 5;
    bool allow_file_editing = 6;
    bool autorun = 7;
    uint32 runtime_version = 8;
}

message UpdateApplicationResponse {}

message CloneApplicationRequest {
    string id = 1;
    string destination_id = 2;
}

message CloneApplicationResponse {}

message DeleteApplicationRequest {
    string id = 1;
}

message DeleteApplicationResponse {}

message ApplicationFilesRequest {
    string application_id = 1;
    PaginationParameters pagination_params = 2;
    string search_query = 3;
}

message ApplicationFilesResponse {
    repeated ApplicationFile files = 1;
    uint64 offset = 2;
    uint64 total = 3;
}

message ApplicationFile {
    string application_id = 1;
    string name = 2;
    google.protobuf.Timestamp updated_at = 3;
    User updated_by = 4;
    string edit_message = 5;
    bool public = 6;
    string type = 7;
    optional bytes content = 8;
}

message GetApplicationFileRequest {
    string application_id = 1;
    string name = 2;
}

message UpdateApplicationFileResponse {}

message CloneApplicationFileRequest {
    string application_id = 1;
    string name = 2;
    string destination_application_id = 3;
    string destination_name = 4;
}

message CloneApplicationFileResponse {}

message DeleteApplicationFileRequest {
    string application_id = 1;
    string name = 2;
}

message DeleteApplicationFileResponse {}

message LaunchApplicationRequest {
    string id = 1;
}

message LaunchApplicationResponse {}

message StopApplicationRequest {
    string id = 1;
}

message StopApplicationResponse {}

enum ApplicationLogLevel {
    UNKNOWN_APPLICATION_LOG_LEVEL = 0;
    APPLICATION_LOG_LEVEL_JS_LOG = 1;
    APPLICATION_LOG_LEVEL_JS_WARN = 2;
    APPLICATION_LOG_LEVEL_JS_ERROR = 3;
    APPLICATION_LOG_LEVEL_RUNTIME_LOG = 4;
    APPLICATION_LOG_LEVEL_RUNTIME_ERROR = 5;
}

message ApplicationLogRequest {
    string application_id = 1;
    repeated ApplicationLogLevel levels = 2;
    optional string offset = 3;
    uint32 limit = 4;
}

message ApplicationLogEntry {
    string cursor = 1;
    google.protobuf.Timestamp created_at = 2;
    ApplicationLogLevel level = 3;
    string message = 4;
}

message ApplicationLogResponse {
    repeated ApplicationLogEntry entries = 1;
    bool has_more = 2;
}

message ConsumeApplicationLogRequest {
    string application_id = 1;
    repeated ApplicationLogLevel levels = 2;
    bool stay_connected_on_termination = 3;
    optional string include_logs_since_offset = 4;
}

message ApplicationLogEntryContainer {
    bool is_heartbeat = 1;
    optional ApplicationLogEntry entry = 2;
}

message MonitorRunningApplicationsRequest {}

message RunningApplication {
    string application_id = 1;
    google.protobuf.Timestamp application_version = 2;
    google.protobuf.Timestamp started_at = 3;
}

message RunningApplications {
    bool is_heartbeat = 1;
    repeated RunningApplication running_applications = 2;
}

message EvaluateExpressionOnApplicationRequest {
    string application_id = 1;
    string expression = 2;
}

message EvaluateExpressionOnApplicationResponse {
    bool successful = 1;
    string result = 2;
    google.protobuf.Duration execution_time = 3;
}

message ExportApplicationRequest {
    string application_id = 1;
}

message ExportApplicationResponse {
    string archive_name = 1;
    string archive_type = 2;
    bytes archive_content = 3;
}

message ImportApplicationRequest {
    string application_id = 1;
    bool append_only = 2;
    bool restore_edit_messages = 3;
    bytes archive_content = 4;
}

message ImportApplicationResponse {}

message TypeScriptTypeDefinitionsRequest {}

message TypeScriptTypeDefinitionsResponse {
    string typescript_version = 1;
    bytes type_definitions_file = 2;
}

message CreateApplicationWithWalletPrefixRequest {
    Application application = 1;
    string prefix = 2;
}

message CreateApplicationWithWalletPrefixResponse {}